--- a/trunk/icqlib/pom.xml
+++ b/trunk/icqlib/pom.xml
@@ -30,11 +30,27 @@
           <encoding>UTF-8</encoding>
         </configuration>
       </plugin>
+
+      <!-- Specify plugin version due to bug in 2.0-beta-7 
+           TODO: Remove version field when 2.0 will released
+      -->
       <plugin>
         <artifactId>maven-release-plugin</artifactId>
         <version>2.0-beta-9</version>
         <configuration>
           <tagBase>https://caffeineim.googlecode.com/svn/tags/icqlib</tagBase>
+        </configuration>
+      </plugin>
+
+      <!-- Filter developer properties files from jar -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+	<artifactId>maven-jar-plugin</artifactId>
+	<configuration>
+          <excludes>
+  	    <exclude>**/commons-logging.properties</exclude>
+	     <exclude>**/log4j.properties</exclude>
+	  </excludes>
         </configuration>
       </plugin>
     </plugins>
